Fix z-index Issues.
This fixes the z-index issue with the navbar along with hiding any
popovers when you enter into the lightbox.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -69,6 +69,10 @@ p.n-margin {
     border-radius: 4px;
 }
 
+.modal-backdrop {
+    z-index: 102;
+}
+
 #unmute_muted_topic_notification {
     display: none;
     position: absolute;
